--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ UI interaction modules.</P>
                     <h3>ABOUT US</h3>
                     <p>Entry-level Frontend Developer skilled in building clean, responsive and interactive user 
                         interfaces using HTML5, CSS3, JavaScript (ES6+), React, Locomotive Scroll, Canvas 
-                        animations, GSAP animations, and modern tools. Seeking a fresher-friendly frontend role.<span style="fontweight:900 color:"#95C11E">Here are some of my projects that I have made.</span></p>
+                        animations, GSAP animations, and modern tools. Seeking a fresher-friendly frontend role.Here are some of my projects that I have made.</p>
                 </div>
                 <img src="./anuj1.jpg">
             </div>
