--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>Anuj Shukla</h1>
             <h2>Frontend Developer</h2>
             <P>Respected Hiring Manager, 
-I am applying for the Frontend Developer position. I have strong hands-on experience in 
+I am seeking for the Frontend Developer position. I have strong hands-on experience in 
 HTML, CSS, JavaScript, React, GSAP animations, and modern UI development. I have 
 built projects including animated landing pages, React applications, API-based tools, and 
 UI interaction modules.</P>
@@ -52,8 +52,8 @@ UI interaction modules.</P>
                 <div id="about-us-in">
                     <h3>ABOUT US</h3>
                     <p>Entry-level Frontend Developer skilled in building clean, responsive and interactive user 
-                        interfaces using HTML5, CSS3, JavaScript (ES6+), React, Locomotive Scroll, Canvas 
-                        animations, GSAP animations, and modern tools. Seeking a fresher-friendly frontend role.Here are some of my projects that I have made.</p>
+                        interfaces using <span> HTML5, CSS3, JavaScript (ES6+), React, Locomotive Scroll, Canvas 
+                        animations, GSAP animations, </span> and modern tools. Seeking a fresher-friendly frontend role.Here are some of my projects that I have made.</p>
                 </div>
                 <img src="./anuj1.jpg">
             </div>
