--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="nav">
+        <img src="./logo.png">
         <h4>AboutUs</h4>
         <h4>Projects</h4>
         <h4>Skills</h4>
