--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ UI interaction modules.</P>
                     <h3>ABOUT US</h3>
                     <p>Entry-level Frontend Developer skilled in building clean, responsive and interactive user 
                         interfaces using <span> HTML5, CSS3, JavaScript (ES6+), React, Locomotive Scroll, Canvas 
-                        animations, GSAP animations, </span> and modern tools. Seeking a fresher-friendly frontend role.Here are some of my projects that I have made.</p>
+                        animations, GSAP animations, </span> and modern tools. Seeking a fresher-friendly frontend role.<span>Here are some of my projects </span> that I have made.</p>
                 </div>
                 <img src="./anuj1.jpg">
             </div>
